--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
   "homepage": "https://github.com/TejuMehar/LodgifyMe-Hotel-Listing#readme",
   "description": "",
   "dependencies": {
+    "cloudinary": "^1.41.3",
     "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.5.0",
+    "dotenv": "^16.6.1",
     "ejs": "^3.1.10",
     "ejs-mate": "^4.0.0",
     "express": "^5.1.0",
@@ -27,6 +28,8 @@
     "joi": "^17.13.3",
     "method-override": "^3.0.0",
     "mongoose": "^8.15.2",
+    "multer": "^2.0.2",
+    "multer-storage-cloudinary": "^4.0.0",
     "nodemon": "^3.1.10",
     "passport": "^0.7.0",
     "passport-local-mongoose": "^8.0.0"
