--- a/package.json
+++ b/package.json
@@ -1,4 +1,8 @@
+
 {
+  "engines":{
+    "node": "22.16.0"
+},
   "name": "logifyme",
   "version": "1.0.0",
   "main": "index.js",
@@ -19,6 +23,7 @@
   "dependencies": {
     "cloudinary": "^1.41.3",
     "connect-flash": "^0.1.1",
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "ejs": "^3.1.10",
@@ -30,6 +35,7 @@
     "mongoose": "^8.15.2",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "nodemailer": "^7.0.6",
     "nodemon": "^3.1.10",
     "passport": "^0.7.0",
     "passport-local-mongoose": "^8.0.0"
